--- a/views/editIngre.ejs
+++ b/views/editIngre.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/app.css" />
     <title>Cooking Preparations</title>
   </head>
-  <body class="boLogin">
+  <body class="boRecipe">
       <form action="/ingre/<%=recipe.id%>/<%=ingredient.id%>?_method=PUT" method="POST">
           <div class="setReceta">
             <div class=recItem>
@@ -28,12 +28,18 @@
             <input class="fRecipe" type="text" id="unit" name="unit" value="<%=ingredient.unit%>"/>
             </div>
             <div class=recItem>
-            <input id="butt" class="fRecipe" type="submit" name="" value="Submit Changes" />
+            <input id="butt" class="fRecipe" type="hidden" name="" value="Submit Changes" />
+            <button type="submit" name="actualiza" value="Submit Changes" class="fRecipe">
+                Update
+            </button>
           </div>
         </div>
       </form>
       <form action="/ingre/<%=recipe.id%>/<%=ingredient.id%>?_method=DELETE" method="POST">
-        <input class="fRecipe" type="submit" value="DELETE"/>
+        <input class="fRecipe" type="hidden" value="DELETE"/>
+        <button type="submit" name="borra" value="DELETE" class="fRecipe">
+            Delete
+        </button>
       </form>
   </body>
 </html>
