--- a/views/newIngre.ejs
+++ b/views/newIngre.ejs
@@ -28,7 +28,10 @@
               <input class="fRecipe" type="text" id="unit" name="unit" />
               </div>
               <div class=recItem>
-                <input id="butt" class="fRecipe" type="submit" value="Save"/>
+                <input id="butt" class="fRecipe" type="hidden" value="Save"/>
+                <button type="submit" name="salva" value="Save" class="fRecipe">
+                  Save
+                </button>
               </div>
           </div>
         </form>
