--- a/views/editRecipe.ejs
+++ b/views/editRecipe.ejs
@@ -25,12 +25,18 @@
             <input class="fRecipe" type="text" id="prepTime" name="prepTime" value="<%=recipe.prepTime%>"/>
             </div>
             <div class=recItem>
-              <input class="fRecipe" type="submit" name="" value="Submit Changes" />
+              <input class="fRecipe" type="hidden" name="" value="Submit Changes" />
+              <button type="submit" name="actualiza" value="Submit Changes" class="fRecipe">
+                  Update
+              </button>
             </div>
           </div>
       </form>
-      <form action="/recipe/<%=user.id%>/edit/<%=recipe.id%>?_method=DELETE" method="POST" >
-        <input class="fRecipe" type="submit" value="DELETE"/>
+      <form class="abajo" action="/recipe/<%=user.id%>/edit/<%=recipe.id%>?_method=DELETE" method="POST" >
+        <input class="fRecipe" type="hidden" value="DELETE"/>
+        <button type="submit" name="borra" value="DELETE" class="fRecipe">
+             Delete
+        </button>
       </form>
   </body>
 </html>
