--- a/views/recipedet.ejs
+++ b/views/recipedet.ejs
@@ -27,8 +27,8 @@
         <div class="recipeLists" color="black">
           <nav>
             <div class="itemRecetaH">
-              <a class="tags" href="/recipe/<%=user.id%>/edit/<%=recipe.id%>">Start Preparation</a>
-              <a class="tags" href="/recipe/<%=user.id%>/edit/<%=recipe.id%>">Prep History</a>
+              <a class="tags" href="/main/<%=user.id%>/prep/<%=recipe.id%>">Create Preparation</a>
+              <a class="tags" href="/prep/history/<%=user.id%>">Prep History</a>
             </div>
             </nav>
           </div>
