--- a/views/recipeEditAdd.ejs
+++ b/views/recipeEditAdd.ejs
@@ -31,6 +31,17 @@
           <div class="tags"><a href="/main/<%=user.id%>/recipeMenu">Back</a></div>
         </nav>
         <div class="frames">
+          <form class="abajo" action="/recipe/<%=user.id%>/edit/<%=recipe.id%>?_method=DELETE" method="POST" >
+            <input class="fRecipe" type="hidden" value="DELETE"/>
+            <button type="submit" name="borra" value="DELETE" class="fRecipe">
+                 Delete the Entire Recipe
+            </button>
+          </form>
+          <button class="fRecipe">
+              <a href="/main/<%=user.id%>/recipeEditAdd/<%=recipe.id%>">Refresh</a>
+          </button>
+
+          <br/>
           <iframe src="/recipe/<%=user.id%>/edit/<%=recipe.id%>" height="60" width="1300" style="border:1px solid teal;"></iframe>
           <% recipe.Ingredients.forEach((ingredient) => { %>
               <iframe src="/ingre/<%=recipe.id%>/<%=ingredient.id%>" height="60" width="1300" style="border:none;"></iframe>            
