--- a/views/main.ejs
+++ b/views/main.ejs
@@ -18,14 +18,14 @@
         <div class="hdivs" id="proSingOut">
             <nav class="tagsCont">
                 <div class="tags"><a href="/users/profile/<%=user.id%>">Profile</a></div>
-                <div class="tags"><a href="/auth/logout">Sing Out</a></div>
+                <div class="tags"><a href="/auth/logout">Sign Out</a></div>
             </nav>
         </div>
      </div>
      <div class="divs" id="mainCentral">
         <nav class="tagsCont">
             <div class="tags"><a href="/main/<%=user.id%>/recipeMenu">Recipes</a></div>
-            <div class="tags"><a href="/prep/<%=user.id%>">My Preparations</a></div>
+            <div class="tags"><a href="/prep/history/<%=user.id%>">My Preparations</a></div>
         </nav>
      </div>
       <div class="divs" id="goodbye">
