--- a/views/newRecipe.ejs
+++ b/views/newRecipe.ejs
@@ -19,7 +19,7 @@
         <div class="hdivs" id="proSingOut">
             <nav class="tagsCont">
                 <div class="tags"><a href="/users/profile/<%=user.id%>">Profile</a></div>
-                <div class="tags"><a href="/auth/logout">Sing Out</a></div>
+                <div class="tags"><a href="/auth/logout">Sign Out</a></div>
             </nav>
         </div>
      </div>
