--- a/views/prepHistory.ejs
+++ b/views/prepHistory.ejs
@@ -19,8 +19,10 @@
         </div>
         <div class="hdivs" id="proSingOut">
             <nav class="tagsCont">
+                <div class="tags"><a href="/prep/history/<%=user.id%>">Refresh</a></div>
+                <div class="tags"><a href="/main/<%=user.id%>">Back</a></div>
                 <div class="tags"><a href="/users/profile/<%=user.id%>">Profile</a></div>
-                <div class="tags"><a href="/auth/logout">Sing Out</a></div>
+                <div class="tags"><a href="/auth/logout">Sign Out</a></div>
             </nav>
         </div>
      </div>
