--- a/views/prepHistory.ejs
+++ b/views/prepHistory.ejs
@@ -16,7 +16,8 @@
         <div class="hdivs">
             <h1 class="header">Cooking Preparations</h1>
             <h5 class="welmes">This site was created to help people to plan their recipes and help them with the preparation.</h5>
-        </div>
+            <h1 class="header2">Preparation History</h1>
+          </div>
         <div class="hdivs" id="proSingOut">
             <nav class="tagsCont">
                 <div class="tags"><a href="/prep/history/<%=user.id%>">Refresh</a></div>
@@ -36,7 +37,7 @@
         </div>
         <div class="forContent">
             <div id="content" class="tabcontent">
-                <iframe id="iMain" src="" height="800" width="1300" style="border:none;"></iframe>
+                <iframe id="iMain" src="" height="800" width="800" style="border:none;"></iframe>
             </div>
         </div>        
      </div>
