--- a/views/showrecipe.ejs
+++ b/views/showrecipe.ejs
@@ -15,6 +15,7 @@
         <div class="hdivs">
             <h1 class="header">Cooking Preparations</h1>
             <h5 class="welmes">This site was created to help people to plan their recipes and help them with the preparation.</h5>
+            <h1 class="header2">Recipe</h1>
         </div>
         <div class="hdivs" id="proSingOut">
             <nav class="tagsCont">
