--- a/public/css/app.css
+++ b/public/css/app.css
@@ -57,7 +57,7 @@
 #headDiv {
     background-image: url("https://cdn.ticbeat.com/src/uploads/2019/03/GettyImages-941858854-810x541.jpg");
     background-position: left bottom;
-    min-height: 260px;
+    min-height: 220px;
     max-height: 220px;
     display: flex;
     flex-direction: column;
@@ -66,7 +66,7 @@
 #headDivMain {
     background-image: url("https://cdn.ticbeat.com/src/uploads/2019/03/GettyImages-941858854-810x541.jpg");
     background-position: left bottom;
-    min-height: 270px;
+    min-height: 230px;
     max-height: 220px;
     display: flex;
 }
@@ -138,7 +138,7 @@
 .tagsCont {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-end;
 }
 
 .tags {
@@ -194,7 +194,7 @@
 }
 
 .campos {
-    font-family: 'Tauri', sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 25px;
     padding: 5px;
 }
@@ -214,7 +214,7 @@ input[type=submit] {
 }
 
 .itemRecetaH {
-    font-family: 'Tauri', sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 15px;
     color: teal;
     padding: 5px;
@@ -245,14 +245,14 @@ input[type=submit] {
 }
 
 .item {
-    font-family: 'Tauri', sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 18px;
     color: darkgreen;
     padding: 5px;
 }
 
 .itemReceta {
-    font-family: 'Tauri', sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 15px;
     color: teal;
     padding: 5px;
@@ -267,15 +267,16 @@ input[type=submit] {
 .setReceta {
     display: flex;
     flex-direction: row;
-    justify-content: center; 
+    justify-content: flex-start; 
     flex-wrap: wrap;
     padding: 5px;
+    float: inline;
 }
 
 setReceta2 {
     display: flex;
     flex-direction: column;
-    justify-content: center; 
+    justify-content: flex-start; 
     flex-wrap: wrap;
     padding: 5px;
 }
@@ -288,14 +289,14 @@ setReceta2 {
 }
 
 .lRecipe {
-    font-family: 'Tauri', sans-serif;
-    font-size: 15px;
+    font-family: "Lato", sans-serif;
+    font-size: 13px;
     padding: 2px;
 }
 
 .fRecipe {
-    font-family: 'Tauri', sans-serif;
-    font-size: 13px;
+    font-family: "Lato", sans-serif;
+    font-size: 11px;
     padding: 2px;
 }
 
@@ -312,5 +313,9 @@ setReceta2 {
     flex-direction: column;
     align-items: left;
     flex-wrap: wrap;
+}
+
+.formDelete {
+    float: inline;
 }
 
