--- a/views/editRecipe.ejs
+++ b/views/editRecipe.ejs
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Lobster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Tauri&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/app.css" />
+    <link rel="stylesheet" href="/css/buttons.css" />
     <title>Cooking Preparations</title>
   </head>
   <body class="boRecipe">
@@ -26,7 +27,7 @@
             </div>
             <div class=recItem>
               <input class="fRecipe" type="hidden" name="" value="Submit Changes" />
-              <button type="submit" name="actualiza" value="Submit Changes" class="fRecipe">
+              <button class="mySaveUpd" type="submit" name="actualiza" value="Submit Changes">
                   Update
               </button>
             </div>
