--- a/views/newRecipe.ejs
+++ b/views/newRecipe.ejs
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Lobster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Tauri&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/app.css" />
+    <link rel="stylesheet" href="/css/buttons.css" />
     <title>Cooking Preparations</title>
   </head>
   <body class="boLogin">
@@ -39,7 +40,10 @@
               <input class="fRecipe" type="text" id="prepTime" name="prepTime" />
               </div>
               <div class="recItem">
-                <input id="butt" class="fRecipe" type="submit" value="Save"/>
+                <input id="butt" class="fRecipe" type="hidden" value="Save"/>
+                <button class="mySaveUpd" type="submit" name="salva" value="Save">
+                  Save
+                </button>
               </div>
             </div>
         </form>
