--- a/views/newstep.ejs
+++ b/views/newstep.ejs
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Lobster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Tauri&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/app.css" />
+    <link rel="stylesheet" href="/css/buttons.css" />
     <title>Cooking Preparations</title>
   </head>
   <body class="boLogin">
@@ -23,7 +24,7 @@
               <div class=recItem>
                 <input id="butt" class="fRecipe" type="hidden" value="Save"/>
                 <br/>
-                <button type="submit" name="salva" value="Save" class="fRecipe">
+                <button class="mySaveUpd" type="submit" name="salva" value="Save">
                     Save
                 </button>
               </div>
