--- a/views/showOnePrep.ejs
+++ b/views/showOnePrep.ejs
@@ -6,26 +6,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Lobster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Tauri&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/app.css" />
+    <link rel="stylesheet" href="/css/buttons.css" />
     <title>Cooking Preparations</title>
   </head>
   <body class="boLogin">
        <div class="framesCont">
         <div class="frames">
           <form class="abajo" action="/prep/<%=prep.userId%>/edit/<%=prep.id%>?_method=DELETE" method="POST" >
+            <a class="mySaveUpd" href="/prep/showOne/<%=prep.userId%>/<%=prep.id%>">Refresh</a>
             <input class="fRecipe" type="hidden" value="DELETE"/>
-            <button type="submit" name="borra" value="DELETE" class="fRecipe">
+            <button class="mySaveUpd" type="submit" name="borra" value="DELETE" >
                  Delete the Preparation
             </button>
           </form>
-          <button class="fRecipe">
-              <a href="/prep/showOne/<%=prep.userId%>/<%=prep.id%>">Refresh</a>
-          </button>
-          <iframe src="/prep/<%=prep.userId%>/edit/<%=prep.id%>" height="130" width="1000" style="border:1px solid teal;"></iframe>
+          <iframe src="/prep/<%=prep.userId%>/edit/<%=prep.id%>" height="130" width="730" style="border:1px solid teal;"></iframe>
           <% prep.prepIngredients.forEach((ingredient) => { %>
-              <iframe src="/prepIngre/<%=prep.id%>/<%=ingredient.id%>" height="60" width="1000" style="border:none;"></iframe>            
+              <iframe src="/prepIngre/<%=prep.id%>/<%=ingredient.id%>" height="60" width="730" style="border:none;"></iframe>            
           <% }); %>
           <% prep.pSteps.forEach((step) => { %>
-            <iframe src="/prepStep/<%=prep.id%>/<%=step.id%>" height="200" width="1000" style="border:none;"></iframe>            
+            <iframe src="/prepStep/<%=prep.id%>/<%=step.id%>" height="160" width="730" style="border:none;"></iframe>            
           <% }); %>
         </div>
       </div>
