--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17,14 +17,14 @@
 }
 
 .header2 {
-    font-family: 'Tauri', sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 30px;
     color: white;
     height: 1em;
 }
 
 .headerR {
-    font-family: 'Tauri', sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 30px;
     color: black;
     height: 1em;
@@ -57,7 +57,7 @@
 #headDiv {
     background-image: url("https://cdn.ticbeat.com/src/uploads/2019/03/GettyImages-941858854-810x541.jpg");
     background-position: left bottom;
-    min-height: 220px;
+    min-height: 230px;
     max-height: 220px;
     display: flex;
     flex-direction: column;
@@ -69,6 +69,7 @@
     min-height: 230px;
     max-height: 220px;
     display: flex;
+    flex-direction: row;
 }
 
 /* Este es para el main */
