--- a/public/css/app.css
+++ b/public/css/app.css
@@ -55,7 +55,8 @@
 } 
 
 #headDiv {
-    background-image: url("https://cdn.ticbeat.com/src/uploads/2019/03/GettyImages-941858854-810x541.jpg");
+    /* background-image: url("https://cdn.ticbeat.com/src/uploads/2019/03/GettyImages-941858854-810x541.jpg"); */
+    background-image: url("https://cdn.pixabay.com/photo/2017/07/28/13/29/spices-2548653_1280.jpg");
     background-position: left bottom;
     min-height: 230px;
     max-height: 220px;
@@ -64,7 +65,8 @@
 }
 
 #headDivMain {
-    background-image: url("https://cdn.ticbeat.com/src/uploads/2019/03/GettyImages-941858854-810x541.jpg");
+    /* background-image: url("https://cdn.ticbeat.com/src/uploads/2019/03/GettyImages-941858854-810x541.jpg"); */
+    background-image: url("https://cdn.pixabay.com/photo/2017/07/28/13/29/spices-2548653_1280.jpg");
     background-position: left bottom;
     min-height: 230px;
     max-height: 220px;
@@ -129,7 +131,8 @@
 
 #goodbye {
     height: 50px;
-    background-image: url("https://cdn.ticbeat.com/src/uploads/2019/03/GettyImages-941858854-810x541.jpg");
+    /* background-image: url("https://cdn.ticbeat.com/src/uploads/2019/03/GettyImages-941858854-810x541.jpg"); */
+    background-image: url("https://cdn.pixabay.com/photo/2017/07/28/13/29/spices-2548653_1280.jpg");
     background-size: 600px auto;
     font-family: 'Lobster', cursive;
     font-size: 25px;
