--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12,14 +12,14 @@
 .header {
     font-family: 'Lobster', cursive;
     font-size: 60px;
-    color: white;
+    color: green;
     height: 1em;
 }
 
 .header2 {
     font-family: "Lato", sans-serif;
     font-size: 30px;
-    color: white;
+    color: green;
     height: 1em;
 }
 
@@ -39,7 +39,7 @@
 .welmes {
     font-family: 'Tauri', sans-serif;
     font-size: 15px;
-    color: white;
+    color: green;
     height: 1em;
 }
 
@@ -56,7 +56,7 @@
 
 #headDiv {
     /* background-image: url("https://cdn.ticbeat.com/src/uploads/2019/03/GettyImages-941858854-810x541.jpg"); */
-    background-image: url("https://cdn.pixabay.com/photo/2017/07/28/13/29/spices-2548653_1280.jpg");
+    background-image: url("https://cdn.pixabay.com/photo/2014/06/11/17/00/cook-366875_1280.jpg");
     background-position: left bottom;
     min-height: 230px;
     max-height: 220px;
@@ -66,7 +66,7 @@
 
 #headDivMain {
     /* background-image: url("https://cdn.ticbeat.com/src/uploads/2019/03/GettyImages-941858854-810x541.jpg"); */
-    background-image: url("https://cdn.pixabay.com/photo/2017/07/28/13/29/spices-2548653_1280.jpg");
+    background-image: url("https://cdn.pixabay.com/photo/2014/06/11/17/00/cook-366875_1280.jpg");
     background-position: left bottom;
     min-height: 230px;
     max-height: 220px;
@@ -132,11 +132,11 @@
 #goodbye {
     height: 50px;
     /* background-image: url("https://cdn.ticbeat.com/src/uploads/2019/03/GettyImages-941858854-810x541.jpg"); */
-    background-image: url("https://cdn.pixabay.com/photo/2017/07/28/13/29/spices-2548653_1280.jpg");
+    background-image: url("https://cdn.pixabay.com/photo/2014/06/11/17/00/cook-366875_1280.jpg");
     background-size: 600px auto;
     font-family: 'Lobster', cursive;
     font-size: 25px;
-    color: white;
+    color: green;
 }
 
 .tagsCont {
